# annex

./: .eslintrc.json  README.md  meson.build
.github/workflows/: flatpak.yml
build-aux/flatpak/: ca.andyholmes.Annex.json
data/: ca.andyholmes.Annex.data.gresource.xml  ca.andyholmes.Annex.desktop.in  ca.andyholmes.Annex.desktop.in.in  ca.andyholmes.Annex.gschema.xml  ca.andyholmes.Annex.service.in  meson.build
data/css/: application.css
data/metainfo/: ca.andyholmes.Annex.appdata.xml.in  meson.build
data/ui/: detailed-version-dialog.ui  detailed-version-row.ui  explore-view-item.ui  explore-view-row.ui  explore-view-tile.ui  explore-view.ui  extension-installer-dialog.ui  extension-installer-widget.ui  extension-version-dialog.ui  extension-version-row.ui  extension-view-screenshot.ui  extension-view.ui  installed-view-row.ui  installed-view.ui  search-view-row.ui  search-view.ui  window.ui
po/: POTFILES  annex.pot  meson.build
src/: ca.andyholmes.Annex.src.gresource.xml  ego.js  exploreView.js  extensionInstaller.js  extensionSystem.js  extensionView.js  installedView.js  main.js  meson.build  searchView.js  shell.js  utils.js  window.js
tests/: meson.build
